# cookiecutter-python

./: .gitignore  cookiecutter.json  run.py
{{cookiecutter.name}}/: .gitignore  pyproject.toml
{{cookiecutter.name}}/{{cookiecutter.package_name}}/: main.py
